[package]
name = "property_pro_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
serde_json = "1.0"
validator = { version = "0.18.1", features = ["derive"] }
mongodb = "2.3.0"
rand = "0.8" 
thiserror = "1.0" 
tokio = { version = "1", features = ["full"] }

# auth dependencies
actix-web-httpauth = "0.8.2"
argonautica = "0.2.0"
dotenv = "0.15.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
